--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.3.0
   provider: ^6.1.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
