--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   go_router: ^14.3.0
   provider: ^6.1.2
   encrypt: ^5.0.3
+  intl: ^0.19.0
+  share_plus: ^7.2.1
+  uuid: ^4.5.1
+  flutter_widget_from_html_core: ^0.15.1
+  webview_flutter: ^4.8.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +67,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/pics/
+    - assets/data/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
