--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   go_router: ^14.3.0
   provider: ^6.1.2
   encrypt: ^5.0.3
+  intl: ^0.19.0
+  flutter_html: ^3.0.0-beta.2
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +64,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/pics/
+    - assets/data/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
